--- a/WebTable/Dockerfile
+++ b/WebTable/Dockerfile
@@ -5,15 +5,14 @@
 
 FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["WebTable/WebTable.csproj", "WebTable/"]
+COPY ["WebTable.csproj", "WebTable/"]
 RUN dotnet restore "WebTable/WebTable.csproj"
-COPY . .
 WORKDIR "/src/WebTable"
+EXPOSE 80
+COPY . .
 RUN dotnet build "WebTable.csproj" -c Release -o /app/build
 
 FROM build AS publish
